# ducktracker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  build.rs
.github/workflows/: ci.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: HamburgerMenu.tsx  LocationButton.tsx  LoginOverlay.tsx  MapComponent.tsx  TagFilter.tsx
frontend/src/hooks/: useAuthStore.ts  useGeolocation.ts  useStore.ts  useThrottle.ts
frontend/src/lib/: protocol.ts  set.ts  types.ts
monitoring/: docker-compose.yaml  grafana-dashboard.json
monitoring/prometheus/: prometheus.yml
scripts/: build-local.sh  export-models-types.sh
src/: assets.rs  bounded_set.rs  box_coords.rs  db.rs  db_models.rs  handlers.rs  main.rs  models.rs  prometheus.rs  session_counter.rs  state.rs  utils.rs  version.rs
test/: api.py  clientsim.py  dt_types.py  test_api.py  walksim.py
