[package]
name = "duck_tracker"
version = "0.1.0"
edition = "2024"
authors = ["Erkki Seppälä <flux@inside.org>"]

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
actix-cors = "0.6"
futures = "0.3"
