[package]
name = "duck_tracker"
version = "0.1.0"
edition = "2024"
authors = ["Erkki Seppälä <flux@inside.org>"]

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
actix-cors = "0.6"
futures = "0.3"
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
tokio = { version = "1.47.1", features = ["full"] }
actix-web-lab = "0.24.3"
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures-util = "0.3.31"
ts-rs = "11.0.1"
actix-web-httpauth = "0.8.2"
rust-embed = "8.7.2"
actix-web-rust-embed-responder = "2.2.3"
mime_guess = "2.0.5"
turso = "0.1.4"
anyhow = { version = "1.0.99", features = ["backtrace"] }
